Update Slide: Transfer info between XDP and netstack
I have checked that the AF_XDP code also copy metadata so it
is avail in-front of payload.  And @apalos have also used this
for his TSN testing.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/FOSDEM2019/xdp_building_block.org
+++ b/conference/FOSDEM2019/xdp_building_block.org
@@ -251,6 +251,7 @@ Ways to transfer /info between XDP and netstack/
  - XDP have 32 bytes *metadata* in-front of payload
    - TC-eBPF (cls_bpf) can read, and update SKB fields
    - E.g. save XDP lookup and use in TC-eBPF hook
+   - *AF_XDP* raw frames have this /metadata avail in-front of payload/
 
 * Slide: XDP integrating with other solutions                        :export:
 :PROPERTIES:
