FOSDEM: Update mid-slide: Focus on AF_XDP
Frame that we will be talking about a kind of kernel-bypass
where XDP is usually in-kernel processing of frames.

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/FOSDEM2019/xdp_building_block.org
+++ b/conference/FOSDEM2019/xdp_building_block.org
@@ -293,6 +293,9 @@ VPP (FD.io) *could* integrate via AF_XDP DPDK-PMD
 :reveal_extra_attr: class="mid-slide"
 :END:
 
+Let take a closer look at AF_XDP
+ - Diverting from XDP /in-kernel/ frame processing
+ - Allow selective *kernel-bypass* via XDP_REDIRECT into AF_XDP sockets
 
 * Emacs tricks
 
