--- a/conference/FOSDEM2019/xdp_building_block.org
+++ b/conference/FOSDEM2019/xdp_building_block.org
@@ -303,14 +303,14 @@ AF_XDP bound to */single RX-queue id/* (for SPSC performance reasons)
   * Use ethtool or TC HW offloading for filter setup
 
 
-* FIXME: Below slides move into AF_XDP slides
+* Integration with AF_XDP                                            :export:
 :PROPERTIES:
 :reveal_extra_attr: class="mid-slide"
 :END:
 
-Magnus should integrated next slides into AF_XDP focus
+How can *kernel-bypass* solutions use AF_XDP as a /building block/?
 
-** Slide: XDP integration with DPDK                                 :export:
+** Slide: AF_XDP integration with DPDK                              :export:
 
 *XDP poll-mode driver for DPDK*
  - Based on [[https://www.kernel.org/doc/html/latest/networking/af_xdp.html][AF_XDP sockets]]
@@ -322,13 +322,13 @@ Makes it /easier and more flexible for DPDK/
  - Run existing DPDK based apps on XDP-capable drivers
  - Less setup restrictions, XDP works with vanilla kernels
 
-** Slide: XDP integration with VPP                                   :export:
+** Slide: AF_XDP integration with VPP                               :export:
 
 VPP (FD.io) *could* integrate via AF_XDP DPDK-PMD
  - But already have other hooks e.g tun/tap
  - Would it be more optimal with more "native" XDP integration?
 
-** Slide: XDP integration with Snabb Switch                         :export:
+** Slide: AF_XDP integration with Snabb Switch                      :export:
 
 [[https://github.com/snabbco/snabb/blob/master/README.md][Snabb Switch]]
 - How do we imagine integration?
