Playing with python colors
Colors in the default property cycle:
 https://matplotlib.org/gallery/color/color_cycle_default.html

The xkcd colors can be referenced by name:
 https://xkcd.com/color/rgb/
 https://matplotlib.org/api/colors_api.html?highlight=color#module-matplotlib.colors

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/conference/FOSDEM2019/slides_examples.org
+++ b/conference/FOSDEM2019/slides_examples.org
@@ -78,7 +78,9 @@ objects = [a[0] for a in data]
 y_pos = np.arange(len(objects))
 performance = [a[1] for a in data]
 
-plt.bar(y_pos, performance, align='center', alpha=0.6)
+my_colors = ['xkcd:blue', 'xkcd:orange', 'xkcd:green', 'xkcd:red',
+             'xkcd:purple', 'xkcd:brown' ]
+plt.bar(y_pos, performance, align='center', alpha=0.6, color=my_colors)
 plt.xticks(y_pos, objects)
 plt.ylabel('Mpps')
 plt.title('AF_XDP - RX-drop')
@@ -114,7 +116,11 @@ objects = [a[0] for a in data]
 y_pos = np.arange(len(objects))
 performance = [a[1] for a in data]
 
-plt.barh(y_pos, performance, align='center', alpha=0.6)
+'''Extract colors in the default property cycle'''
+prop_cycle = plt.rcParams['axes.prop_cycle']
+my_colors = prop_cycle.by_key()['color']
+
+plt.barh(y_pos, performance, align='center', alpha=0.6, color=my_colors)
 plt.yticks(y_pos, objects)
 plt.xlabel('Mpps')
 plt.title('AF_XDP - RX-drop')
