--- a/conference/FOSDEM2019/slides_examples.org
+++ b/conference/FOSDEM2019/slides_examples.org
@@ -66,7 +66,7 @@ file:rx_drop.png
 
 Not much room for describing the figure
 
-* Example-2: Python pyplot code                                    :noexport:
+* Example-2: Python code for bar chart                             :noexport:
 
 Execute python code in emacs via keyboard shortcut: =C-c C-c=
 
@@ -80,12 +80,21 @@ performance = [a[1] for a in data]
 
 my_colors = ['xkcd:blue', 'xkcd:orange', 'xkcd:green', 'xkcd:red',
              'xkcd:purple', 'xkcd:brown' ]
-plt.bar(y_pos, performance, align='center', alpha=0.6, color=my_colors)
-plt.xticks(y_pos, objects)
-plt.ylabel('Mpps')
-plt.title('AF_XDP - RX-drop')
 
-plt.savefig(fname)
+fig, ax = plt.subplots()
+ax.set_ylabel('Mpps')
+ax.set_title('AF_XDP - RX-drop')
+
+rects = ax.bar(y_pos, performance, align='center', alpha=0.6, color=my_colors)
+ax.set_xticks(y_pos)
+ax.set_xticklabels(objects)
+
+for rect in rects:
+    height = rect.get_height()
+    ax.text(rect.get_x() + rect.get_width()/2., height,
+            height, ha='center', va='bottom')
+
+fig.savefig(fname)
 return fname
 #+END_SRC
 
@@ -136,6 +145,8 @@ return fname
 file:bar_chart_horizontal.svg
 
 # No room for info on slide any-longer
+
+
 
 
 * Emacs tricks
