--- a/conference/FOSDEM2019/slides_examples.org
+++ b/conference/FOSDEM2019/slides_examples.org
@@ -27,15 +27,16 @@ Different types of bar-chart's:
 * Example-1: Data                                                    :export:
 
 #+tblname: data01
-| legend     | rx_drop | nanosec per packet | saved ns |
-|------------+---------+--------------------+----------|
-| baseline   |    15.1 |              66.23 |       0. |
-| ATTACH     |    17.1 |              58.48 |     7.75 |
-| 1-indirect |    23.4 |              42.74 |    23.49 |
-| RM-switch  |    31.5 |              31.75 |    34.48 |
-| various    |    36.8 |              27.17 |    39.06 |
-| ctx        |    39.3 |              25.45 |    40.78 |
-#+TBLFM: $3=(1/$2)*(1000);%.2f::$4=(@2$3)-$3
+| legend          | rx_drop | nanosec per packet | saved ns | improve ns since prev |
+|-----------------+---------+--------------------+----------+-----------------------|
+| baseline        |    15.1 |              66.23 |       0. |                     0 |
+| XDP_ATTACH      |    17.1 |              58.48 |     7.75 |                  7.75 |
+| remove-indirect |    23.4 |              42.74 |    23.49 |                 15.74 |
+| no-case-switch  |    31.5 |              31.75 |    34.48 |                 10.99 |
+| various         |    36.8 |              27.17 |    39.06 |                  4.58 |
+| explicit-ctx    |    39.3 |              25.45 |    40.78 |                  1.72 |
+#+TBLFM: $3=(1/$2)*(1000);%.2f::$4=(@2$3)-$3::$5=@-1$3-$3::@2$5=0
+
 
 Tables can also be exported in a slide
 
@@ -48,7 +49,7 @@ import matplotlib.pyplot as plt
 import matplotlib as mpl
 mpl.rcParams['figure.figsize'] = [8.0+4.9, 4.5]
 
-txt, rx_drop, c, d = zip(*data)
+txt, rx_drop, c, d, e = zip(*data)
 
 plt.xkcd()
 fig = plt.figure()
@@ -153,9 +154,7 @@ return fname
 
 file:bar_chart_horizontal.svg
 
-# No room for info on slide any-longer
-
-
+Bar Chart Horizontal for RX-drop with AF_XDP
 
 
 * Emacs tricks
