--- a/conference/FOSDEM2019/xdp_building_block.org
+++ b/conference/FOSDEM2019/xdp_building_block.org
@@ -262,14 +262,117 @@ XDP/eBPF can integrate/offload Open vSwitch (OVS) in many ways
  - *Offloading subset to XDP* (issue miss BPF-helpers to work)
  - *AF_XDP*, huge performance gain
 
-* Slide: Focus on AF_XDP                                             :export:
+* Slide: AF_XDP                                                     :export:
 :PROPERTIES:
 :reveal_extra_attr: class="mid-slide"
 :END:
 
-Let take a closer look at AF_XDP
- - Diverting from XDP /in-kernel/ frame processing
- - Allow selective *kernel-bypass* via XDP_REDIRECT into AF_XDP sockets
+
+** Slide: AF_XDP Basics                              :export:
+
+file:af_xdp.png
+
+
+* Performance                                            :export:
+:PROPERTIES:
+:reveal_extra_attr: class="mid-slide"
+:END:
+
+
+** Slide: Experimental Methodology                              :export:
+
+ - Broadwell E5-2660 @ 2.7GHz
+ - Linux 4.20
+ - Spectre and Meltdown mitigations on
+ - 2 i40e 40GBit/s NICs, 2 AF\_XDP sockets
+ - Ixia load generator blasting at full 40 Gbit/s per NIC
+
+
+** Slide: Performance Linux 4.20                              :export:
+
+file:results_4.20.png
+
+
+** Slide: Performance with Optimization Patches                    :export:
+
+file:results_opt.png
+
+
+** Slide: Two ways of running an AF_XDP application                    :export:
+
+file:two_vs_one_core.png
+
+
+** Slide: Busy Poll() Results                              :export:
+
+file:results_poll.png
+
+
+** Slide: Comparison with DPDK                              :export:
+
+file:results_dpdk.png
+
+
+* Integration with AF_XDP                                            :export:
+:PROPERTIES:
+:reveal_extra_attr: class="mid-slide"
+:END:
+
+How can *kernel-bypass* solutions use AF_XDP as a /building block/?
+
+
+** Slide: AF_XDP integration with DPDK                              :export:
+
+*AF_XDP poll-mode driver for DPDK*
+ - [[https://patches.dpdk.org/project/dpdk/list/?series=1000&state=%2a][RFC patchset]] for AF_XDP PMD-driver sent on DPDK-mailing list by Intel
+ - ~1% overhead
+
+Advantages:
+ - Don't monopolize entire NIC
+ - Split traffic to kernel with XDP. XDP support.
+ - HW independent application binary
+ - Isolation and robustness
+ - Cloud-native support
+ - Less setup restrictions
+
+
+** Slide: AF_XDP integration with VPP                               :export:
+
+VPP (FD.io) *could* integrate via AF_XDP DPDK PMD
+ - But VPP uses only user-mode driver of DPDK
+ - VPP has a lot of native functionality
+A native AF_XDP driver would be more efficient
+ - Less code and easier setup without DPDK
+
+
+** Slide: AF_XDP integration with Snabb Switch                      :export:
+
+[[https://github.com/snabbco/snabb/blob/master/README.md][Snabb Switch]]
+- Implement an *AF_XDP driver?*
+- Allow leveraging kernel drivers that implement XDP
+  * Kernel community takes care of maintaining driver code
+- Any *performance loss/gap* to native Snabb driver*?*
+  * E.g. NAPI "only" bulk up-to 64 packets
+  * E.g. NAPI is not doing busy-polling 100%, more latency variance
+
+
+** Slide: Ongoing work                                                :export:
+
+ - Upstreaming performance optimizations
+ - Libbpf: facilitating adoption
+ - Packet clone for XDP
+
+
+** Slide: Summary
+
+ - Summarize the presentation
+
+
+* Backup Slides                                            :export:
+:PROPERTIES:
+:reveal_extra_attr: class="mid-slide"
+:END:
+
 
 ** Slide: Where does AF_XDP performance come from?                  :export:
 
@@ -301,63 +404,6 @@ AF_XDP bound to */single RX-queue id/* (for SPSC performance reasons)
 - You *MUST* configure NIC *HW filters* to /steer to RX-queue id/
   * Out of scope for XDP setup
   * Use ethtool or TC HW offloading for filter setup
-
-
-* Integration with AF_XDP                                            :export:
-:PROPERTIES:
-:reveal_extra_attr: class="mid-slide"
-:END:
-
-How can *kernel-bypass* solutions use AF_XDP as a /building block/?
-
-** Slide: AF_XDP integration with DPDK                              :export:
-
-*XDP poll-mode driver for DPDK*
- - Based on [[https://www.kernel.org/doc/html/latest/networking/af_xdp.html][AF_XDP sockets]]
-   - XDP way to deliver raw frames into userspace
- - [[https://patches.dpdk.org/project/dpdk/list/?series=1000&state=%2a][RFC patchset]] for AF_XDP PMD-driver sent on DPDK-mailing list by Intel
-
-Makes it /easier and more flexible for DPDK/
- - Don't monopolize entire NIC, eBPF filter redirect to DPDK
- - Run existing DPDK based apps on XDP-capable drivers
- - Less setup restrictions, XDP works with vanilla kernels
-
-** Slide: AF_XDP integration with VPP                               :export:
-
-VPP (FD.io) *could* integrate via AF_XDP DPDK-PMD
- - But already have other hooks e.g tun/tap
- - Would it be more optimal with more "native" XDP integration?
-
-** Slide: AF_XDP integration with Snabb Switch                      :export:
-
-[[https://github.com/snabbco/snabb/blob/master/README.md][Snabb Switch]]
-- Implement a *AF_XDP driver?*
-- Allow leveraging kernel drivers that implement XDP
-  * Kernel community takes care of maintaining driver code
-- Any *performance loss/gap* to native Snabb driver*?*
-  * E.g. NAPI "only" bulk up-to 64 packets
-  * E.g. NAPI is not doing busy-polling 100%, more latency variance
-
-
-* Slide: Performance numbers                                         :export:
-:PROPERTIES:
-:reveal_extra_attr: class="mid-slide"
-:END:
-
-Magnus want to talk about performance numbers for AF_XDP
-- Latest performance numbers, without any of the optimization details
-- Busy poll() with performance numbers
-- Where we are in performance compared to DPDK
-
-
-* Slide: Ongoing work                                                :export:
-:PROPERTIES:
-:reveal_extra_attr: class="mid-slide"
-:END:
-
-Magnus want to talk about ongoing work
-- Libbpf work
-- Packet clone for XDP ideas
 
 
 * Emacs tricks
