DONE Prioritize page_pool options for skb_try_coalesce
This was fixed in commit 52b582cb8053c78a

Signed-off-by: Jesper Dangaard Brouer <brouer@redhat.com>

--- a/areas/mem.org
+++ b/areas/mem.org
@@ -16,7 +16,11 @@ CLOSED: [2018-12-07 Fri]
 Org-link to section:
 [[file:mem/page_pool02_SKB_return_callback.org::*RFC-patchset]]
 
-** NEXT Prioritize page_pool options for skb_try_coalesce
+** DONE Prioritize page_pool options for skb_try_coalesce
+CLOSED: [2019-01-29 Tue 17:33]
+:LOGBOOK:
+- State "DONE"       from "NEXT"       [2019-01-29 Tue 17:33]
+:END:
 
 ** TODO Doc code where netstack manipulate skb->head page
 
